--- a/pom.xml
+++ b/pom.xml
@@ -104,6 +104,7 @@
                 <includes>
                     <include>plugin.yml</include>
                     <include>config.yml</include>
+                    <include>messages.yml</include>
                 </includes>
             </resource>
         </resources>
