--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -1,3 +1,3 @@
 name: SimplisticEconomy
 version: 1.0
-main: net.megaplanet.simplisticeconomy.SimplsticEconomy
+main: net.megaplanet.simplisticeconomy.SimplisticEconomy
