--- a/src/main/resources/config.yml
+++ b/src/main/resources/config.yml
@@ -15,6 +15,8 @@ storage:
   port: 3306
   # The MySQL database
   database: economy
+  # The MYSQL table
+  table: economy
 
 # Economy section
 economy:
