Add support to check other's balance

--- a/src/main/resources/messages.yml
+++ b/src/main/resources/messages.yml
@@ -35,8 +35,9 @@ pay-command-sent: "&6You sent &c%amount% &6to &c%player% "
 pay-command-received: "&6You have received &c%amount% &6from &c%player%"
 
 # Balance command
-balance-command-description: "Checks your balance"
+balance-command-description: "Checks your balance or other's balance"
 balance-command-own: "&6Your balance is &c%amount% %currency%."
+balance-command-other: "&c%player%'s &6balance is &c%amount% %currency%."
 
 ############################################################
 # +------------------------------------------------------+ #
