--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -1,8 +1,9 @@
 name: SimplisticEconomy
-version: 1.0
+version: 1.1
 main: net.megaplanet.simplisticeconomy.SimplisticEconomy
 load: STARTUP
 softdepend: [Vault]
+api-version: 1.13
 commands:
   pay:
   eco:
